; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_zcache.c_zcache_mag_fill.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_zcache.c_zcache_mag_fill.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32 }
%struct.zcc_magazine = type { i64, i64 }

@FALSE = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@ASAN_HEAP_FREED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @zcache_mag_fill(%struct.TYPE_7__* %0, %struct.zcc_magazine* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_7__*, align 8
  %5 = alloca %struct.zcc_magazine*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %4, align 8
  store %struct.zcc_magazine* %1, %struct.zcc_magazine** %5, align 8
  %8 = load %struct.zcc_magazine*, %struct.zcc_magazine** %5, align 8
  %9 = getelementptr inbounds %struct.zcc_magazine, %struct.zcc_magazine* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = icmp eq i64 %10, 0
  %12 = zext i1 %11 to i32
  %13 = call i32 @assert(i32 %12)
  store i8* null, i8** %6, align 8
  %14 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %15 = call i32 @lock_zone(%struct.TYPE_7__* %14)
  %16 = load %struct.zcc_magazine*, %struct.zcc_magazine** %5, align 8
  %17 = getelementptr inbounds %struct.zcc_magazine, %struct.zcc_magazine* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  store i64 %18, i64* %7, align 8
  br label %19

19:                                               ; preds = %39, %2
  %20 = load i64, i64* %7, align 8
  %21 = load %struct.zcc_magazine*, %struct.zcc_magazine** %5, align 8
  %22 = getelementptr inbounds %struct.zcc_magazine, %struct.zcc_magazine* %21, i32 0, i32 1
  %23 = load i64, i64* %22, align 8
  %24 = icmp slt i64 %20, %23
  br i1 %24, label %25, label %42

25:                                               ; preds = %19
  %26 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %27 = call i8* @zalloc_attempt(%struct.TYPE_7__* %26)
  store i8* %27, i8** %6, align 8
  %28 = load i8*, i8** %6, align 8
  %29 = icmp ne i8* %28, null
  br i1 %29, label %30, label %37

30:                                               ; preds = %25
  %31 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %32 = load i8*, i8** %6, align 8
  %33 = call i32 @zcache_canary_add(%struct.TYPE_7__* %31, i8* %32)
  %34 = load %struct.zcc_magazine*, %struct.zcc_magazine** %5, align 8
  %35 = load i8*, i8** %6, align 8
  %36 = call i32 @zcache_mag_push(%struct.zcc_magazine* %34, i8* %35)
  br label %38

37:                                               ; preds = %25
  br label %42

38:                                               ; preds = %30
  br label %39

39:                                               ; preds = %38
  %40 = load i64, i64* %7, align 8
  %41 = add nsw i64 %40, 1
  store i64 %41, i64* %7, align 8
  br label %19

42:                                               ; preds = %37, %19
  %43 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %44 = call i32 @unlock_zone(%struct.TYPE_7__* %43)
  %45 = load i64, i64* %7, align 8
  %46 = icmp eq i64 %45, 0
  br i1 %46, label %47, label %49

47:                                               ; preds = %42
  %48 = load i32, i32* @FALSE, align 4
  store i32 %48, i32* %3, align 4
  br label %51

49:                                               ; preds = %42
  %50 = load i32, i32* @TRUE, align 4
  store i32 %50, i32* %3, align 4
  br label %51

51:                                               ; preds = %49, %47
  %52 = load i32, i32* %3, align 4
  ret i32 %52
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @lock_zone(%struct.TYPE_7__*) #1

declare dso_local i8* @zalloc_attempt(%struct.TYPE_7__*) #1

declare dso_local i32 @zcache_canary_add(%struct.TYPE_7__*, i8*) #1

declare dso_local i32 @zcache_mag_push(%struct.zcc_magazine*, i8*) #1

declare dso_local i32 @unlock_zone(%struct.TYPE_7__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
